# real-time-voice

./: plan.md
agent-one/: .gitignore  agent_one_index.db  grocery_store.db  pyproject.toml
agent-one/agent_one.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-one/app/: config.py  main.py
agent-one/app/database/: sql_engine.py
agent-one/app/graph/: graph.py  state.py
agent-one/app/graph/nodes/: answer_composer.py  api_tools.py  fallback.py  intent_router.py  normalize.py  retrieve_website.py
agent-one/app/l1_support/: db.py  emailer.py  graph.py  state.py  work_order.py
agent-one/app/l1_support/data/: escalation_matrix.json  faq.json
agent-one/app/l1_support/nodes/: collect_details.py  compose.py  create_ticket.py  escalate.py  faq_search.py  file_ticket.py  triage.py
agent-one/app/retrieval/: __init__.py  crawler.py  pipeline.py  store.py
agent-one/app/routes/: agent_one.py  l1_support.py
agent-one/app/tools/: __init__.py  business_api.py
agent-one/scripts/: seed_grocery_db.py
agent-one/tests/: conftest.py  test_answer_composer.py  test_api_tools.py  test_crawler.py  test_graph_routing.py  test_intent_router.py  test_invoke_api.py  test_retrieve_website.py  test_sql_engine.py
dev-console/: app.py  pyproject.toml
server/: agent_one_index.db  auth.py  l1_tickets.db  main.py  pyproject.toml
server/agents/: invoker.py
voice-wrapper/: .env.example  README.md  pyproject.toml
voice-wrapper/apps/api/: config.py  main.py
voice-wrapper/apps/api/agents/: agent_one_client.py  registry.py
voice-wrapper/apps/api/realtime/: openai_client.py  session_manager.py  sideband.py  tool_router.py
voice-wrapper/apps/api/routes/: voice.py
voice-wrapper/apps/api/static/: auth.js  index.html  login.html
voice-wrapper/tests/: conftest.py  test_agent_one_client.py  test_config.py  test_integration_agent_one.py  test_openai_client.py  test_registry.py  test_session_manager.py  test_sideband.py  test_tool_call_endpoint.py  test_tool_router.py  test_voice_api.py
wwts-agent/: main.py
