[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.2.2",
    "portals",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
portals = { git = "https://git.wwts.com/bots/portals.git", rev = "2d6167db4eb740420db7177d637b1cc7d16a5472" }
